# linear-algebra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.cc  main.cc  main.cpp  matrix_multiplicator.hh  matrix_test.cc  matrix_value.hh  matrix_value_generator.hh  multiply.cc  scylla_blas.cc  scylla_blas.hh  scylla_matrix.cc  scylla_matrix.hh  scylla_types.hh  sparse_matrix_value_generator.hh  structure_test.cc  value_factory.hh
benchmark/: CMakeLists.txt  benchmark.cc  benchmark.hh  const.hh  insert_benchmark.cc  main.cc
examples/: CMakeLists.txt
examples/arnoldi/: CMakeLists.txt  arnoldi.cc  arnoldi.hh  main.cc
examples/linear_solver/: CMakeLists.txt  example.cc  jacobi_solver.cc  jacobi_solver.hh
include/scylla_blas/: config.hh  matrix.hh  routines.hh  scylla_blas.hh  vector.hh
include/scylla_blas/logging/: logging.hh
include/scylla_blas/queue/: item_set.hh  proto.hh  scylla_queue.hh  worker_proc.hh
include/scylla_blas/structure/: item_set.hh  matrix_block.hh  matrix_value.hh  vector.hh  vector_segment.hh  vector_value.hh
include/scylla_blas/utils/: int_math.hh  matrix_value_generator.hh  scylla_types.hh  sparse_matrix_value_generator.hh  utils.hh
matrix_generators/: matrix_value_generator.hh  preset_matrix_value_generator.hh  preset_value_factory.hh  random_value_factory.hh  sparse_matrix_value_generator.hh
src/: init.cc  main.cc
src/scylla_blas/: blas_generic.cc  blas_level_1.cc  blas_level_2.cc  blas_level_3.cc  blaslike.cc  matrix.cc  vector.cc
src/scylla_blas/queue/: item_set.cc  scylla_queue.cc  worker_proc.cc
src/scylla_blas/structure/: item_set.cc  vector.cc  vector_segment.cc
src/scylla_blas/utils/: int_math.cc
structure/: item_set.cc  item_set.hh  matrix_block.hh  matrix_value.hh  vector.cc  vector.hh
tests/: CMakeLists.txt  config.hh  const.hh  fixture.hh  main.cc  multiply.cc  queue.cc  structure_test.cc  test_init_main.cc  test_utils.hh  vector_utils.hh
tests/blas_level_1/: vector_const_op.cc  vector_copy.cc  vector_scale.cc  vector_swap.cc  vector_utilities.hh
tests/blas_level_2/: multiplications.cc  solver.cc
tests/blas_level_3/: multiply.cc
tests/generators/: matrix_value_generator.hh  preset_value_factory.hh  random_value_factory.hh  sparse_matrix_value_generator.hh  value_factory.hh
tools/: run_scylla.sh  run_workers.sh
utils/: int_math.cc  int_math.hh
